--- a/css/style.css
+++ b/css/style.css
@@ -620,14 +620,31 @@ body {
   .popup__left {
     width: 33.33333333%;
     display: table-cell; }
+    @media (max-width: 56.25em) {
+      .popup__left {
+        display: block;
+        width: 100%;
+        margin-top: 7rem;
+        text-align: center;
+        padding: 0 5rem; } }
   .popup__right {
     width: 66.66666667%;
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem; }
+    @media (max-width: 56.25em) {
+      .popup__right {
+        display: block;
+        width: 100%; } }
   .popup__img {
     display: block;
     width: 100%; }
+    @media (max-width: 56.25em) {
+      .popup__img {
+        display: inline-block;
+        width: 49%;
+        margin: 0;
+        padding: 0; } }
   .popup__text {
     font-size: 1.4rem;
     margin-bottom: 4rem;
