--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -54,6 +54,14 @@
   &__left {
     width: 33.33333333%;
     display: table-cell;
+
+    @include respond(tab-port) {
+      display: block;
+      width: 100%;
+      margin-top: 7rem;
+      text-align: center;
+      padding: 0 5rem;
+    }
   }
 
   &__right {
@@ -61,11 +69,23 @@
     display: table-cell;
     vertical-align: middle;
     padding: 3rem 5rem;
+
+    @include respond(tab-port) {
+      display: block;
+      width: 100%;
+    }
   }
 
   &__img {
     display: block;
     width: 100%;
+
+    @include respond(tab-port) {
+      display: inline-block;
+      width: 49%;
+      margin: 0;
+      padding: 0;
+    }
   }
 
   &__text {
